FS-8223 [verto_communicator] Fixing members list layout when callerid is too long.

--- a/html5/verto/verto_communicator/src/css/verto.css
+++ b/html5/verto/verto_communicator/src/css/verto.css
@@ -8,6 +8,13 @@ body {
   padding-top: 60px;
 }
 
+.ellipsis {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 160px;
+}
+
 .inline-block {
   display: inline-block;
 }
